tests/baselines/reference/stringLiteralObjectLiteralDeclaration1.errors.txt
stringLiteralObjectLiteralDeclaration1.ts(1,8): error TS1294: This syntax is not allowed when 'erasableSyntaxOnly' is enabled.


==== stringLiteralObjectLiteralDeclaration1.ts (1 errors) ====
    module m1 {
           ~~
!!! error TS1294: This syntax is not allowed when 'erasableSyntaxOnly' is enabled.
      export var n = { 'foo bar': 4 };
    }
    